--- a/theme.css
+++ b/theme.css
@@ -48,7 +48,7 @@ html, body, .bigtitle{
 .bigtitle {
   height: 100%;
   width: 100%;
-  background-image: url(school1.jpg);
+  background-image: url(data/img/school1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
