--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous|Roboto|Varela+Round');
 * {
   padding: 0;
   margin: 0;
@@ -39,23 +40,31 @@ a {
 }
 .header a:active {
   background-color: dodgerblue;
-  color: white;
-  font-size: 20px;
 }
-html, body, .bigtitle{
+.header a:active h3 {
+  color: white;
+}
+html, body{
   height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 .bigtitle {
   height: 100%;
   width: 100%;
-  background-image: url(data/img/school1.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+}
+.bigtitle img {
+  -webkit-filter: blur(3px);
+  filter: blur(5x);
+  width: 100%;
+  height: 100%;
 }
 .bigtitle h1 {
-  padding-top: 4em;
-  font-size: 5em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Varela Round', sans-serif;
+  font-size: 4em;
   text-align: center;
   color: white;
 }
