--- a/theme.css
+++ b/theme.css
@@ -12,7 +12,7 @@ a {
   background-color: #f1f1f1;
   text-align: left;
   width: 100%;
-  height: 7%;
+  height: 3em;
   position: fixed;
   display: flex;
   justify-content: space-around;
@@ -29,7 +29,8 @@ a {
 .header h3 {
   margin-left: 1em;
   margin-right: 1em;
-  padding-top: 1em;
+  margin-top: 1em;
+  margin-bottom: auto;
   font-size: 0.9em;
   flex-grow: 1;
   text-align: center;
@@ -70,14 +71,17 @@ html, body{
   color: white;
 }
 .main {
-  margin: auto;
+  margin: 10% auto auto auto;
   width: 80%;
   display: grid;
   grid-template: 50% 50% / 1fr 2fr;
   overflow: hidden;
 }
 .main #contacts {
-  grid-area: 1 / 1 / span 1 / span 2;
+  grid-area: 1 / 1 / span 2 / span 1;
+}
+.main #contacts .social img {
+  width: 3em;
 }
 .main #greets {
   grid-area: 1 / 2 / span 1 / span 1;
