--- a/theme.css
+++ b/theme.css
@@ -8,42 +8,96 @@ a {
   text-decoration: none;
 }
 .header {
-  overflow: hidden;
   background-color: #f1f1f1;
   text-align: left;
   width: 100%;
-  height: 3em;
+  height: 5em;
   position: fixed;
+  top: 0px;
   display: flex;
-  justify-content: space-around;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  z-index: 2;
+  justify-content: space-between;
+  z-index: 1;
 }
-.header img {
+.header>img {
+  position: relative;
+  right: 10%;
+  flex-grow: 2;
   object-fit: contain;
   width: 20%;
-  height: 100%;
-  flex-grow: 0.1;
-}
-.header h3 {
-  margin-left: 1em;
-  margin-right: 1em;
-  margin-top: 1em;
+  height: 80%;
+  margin-top: auto;
   margin-bottom: auto;
+}
+.header .RE {
+  flex-grow: 0.5;
+  height: 5em;
+  display: flex;
+}
+.header .RE a {
+  display: flex; justify-content: center;
+  position: relative;
+  width: 50%;
+  padding: 5%;
+  padding-bottom: 0px;
+  height: 90%;
+}
+.header .RE a .overlay {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .7s ease;
+}
+.header .RE a .overlay p {
+  text-align: center;
+  margin-top: 33%;
+  margin-bottom:auto;
+  color: white;
+
+}
+.header .RE a .teach {
+  bottom: 5%;
+  right: 0;
+  left: 0;
+  background-color: #b36d12;
+}
+.header .RE a .fam {
+  top: 0;
+  right: 0;
+  left:0;
+  background-color: #299c1a;
+}
+.header a:hover .overlay {
+  height: 95%;
+}
+.header .RE a img {
+  height: inherit;
+  width: 5em;
+}
+.header>a {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 2em;
+  margin-right: 2em;
+  height: 3em;
   font-size: 0.9em;
   flex-grow: 1;
   text-align: center;
+  max-width: 8em;
 }
-.header a:hover {
+.header a h3 {
+  margin-top: 0.5em;
+  margin-bottom: auto;
+}
+.header>a:hover {
   border-radius: 4px;
   background-color: #ddd;
   color: black;
 }
-.header a:active {
+.header>a:active {
   background-color: dodgerblue;
 }
-.header a:active h3 {
+.header>a:active h3 {
   color: white;
 }
 html, body{
@@ -51,6 +105,8 @@ html, body{
   font-family: 'Open Sans', sans-serif;
 }
 .bigtitle {
+  position: relative;
+  z-index: 2;
   height: 100%;
   width: 100%;
 }
@@ -72,10 +128,10 @@ html, body{
 }
 .main {
   margin: 10% auto auto auto;
-  width: 80%;
+  width: 90%;
   display: grid;
-  grid-template: 50% 50% / 1fr 2fr;
-  overflow: hidden;
+  grid-template: auto auto / 1fr 2.5fr;
+  grid-gap: 1em;
 }
 .main #contacts {
   grid-area: 1 / 1 / span 2 / span 1;
@@ -91,13 +147,13 @@ html, body{
 }
 .main #contacts a {
   text-align: center;
-
+  margin: auto;
 }
 .main #contacts .infocontact {
   margin-top: 2em;
   margin-bottom: 2em;
 }
-.main #contacts .social img {
+.main #contacts img {
   width: 3em;
 }
 .main #greets {
@@ -107,4 +163,7 @@ html, body{
 .main #comunications {
   margin: 1em;
   grid-area: 2 / 2 / span 1 / span 1;
+}
+.footer {
+  height: 3000px;
 }
