--- a/theme.css
+++ b/theme.css
@@ -110,57 +110,115 @@ html, body{
   height: 100%;
   width: 100%;
 }
-.bigtitle img {
-  -webkit-filter: blur(3px);
-  filter: blur(5x);
+.bigtitle .background {
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
   width: 100%;
   height: 100%;
 }
-.bigtitle h1 {
+.bigtitle .frontground {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.bigtitle .frontground [alt="Farnesina Logo"] {
+  margin-top: 2em;
+  width: 10%;
+  filter: invert(100%);
+}
+.bigtitle .frontground [alt="RE Logo"] {
+  position: absolute;
+  -webkit-filter: brightness(80%);
+  filter: brightness(80%);
+  top: 0;
+  right:0;
+  margin: 1em;
+  width: 5%;
+}
+.bigtitle .frontground .nav {
+  border-bottom: 1px;
+  border-bottom-color: white;
+  border-bottom-style: solid;
+}
+.bigtitle .frontground .nav a {
+  margin: 1em;
+  color: white;
+  font-size: 1.3em;
+}
+.bigtitle .frontground h1 {
   font-family: 'Varela Round', sans-serif;
   font-size: 4em;
   text-align: center;
   color: white;
 }
-.main {
+@keyframes pulse {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+.bigtitle .frontground a {
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  animation-name: pulse;
+  width: 3%;
+  margin-bottom: 1.3em;
+}
+.bigtitle .frontground a img {
+  width: 100%;
+  -webkit-filter: brightness(80%);
+  filter: brightness(80%);
+}
+#main {
   margin: 10% auto auto auto;
   width: 90%;
   display: grid;
   grid-template: auto auto / 1fr 2.5fr;
   grid-gap: 1em;
 }
-.main #contacts {
+#main #contacts {
   grid-area: 1 / 1 / span 2 / span 1;
   padding: 1em;
   background: #f1f1f1;
 }
-.main #contacts p {
+#main #contacts p {
   text-align: right;
 }
-.main #contacts h1 {
+#main #contacts h1 {
   text-align: center;
   margin-bottom: 1em;
 }
-.main #contacts a {
+#main #contacts a {
   text-align: center;
   margin: auto;
 }
-.main #contacts .infocontact {
+#main #contacts .infocontact {
   margin-top: 2em;
   margin-bottom: 2em;
 }
-.main #contacts img {
+#main #contacts img {
   width: 3em;
 }
-.main #greets {
+#main #greets {
   margin: 1em;
   grid-area: 1 / 2 / span 1 / span 1;
 }
-.main #comunications {
+#main #comunications {
   margin: 1em;
   grid-area: 2 / 2 / span 1 / span 1;
 }
