--- a/theme.css
+++ b/theme.css
@@ -128,6 +128,8 @@ html, body{
   filter: brightness(50%);
   width: 100%;
   height: 100%;
+  animation: pulse 1s ease;
+  overflow: hidden;
 }
 .bigtitle .frontground {
   position: absolute;
@@ -187,6 +189,7 @@ html, body{
   background-color: dodgerblue;
 }
 .bigtitle .frontground .nav {
+  position: relative;
   border-bottom: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
@@ -255,6 +258,56 @@ html, body{
   text-align: center;
   margin: auto;
 }
+#main #contacts .common_info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#main #contacts .common_info .timetable {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#main #contacts .common_info p {
+  position: absolute;
+  top: 1.4em;
+  text-align: left;
+  border-radius: 8px;
+  background-color: #b3b3b363;
+  overflow: hidden;
+  transition: .4s ease;
+  margin-bottom: 1em;
+  color: black;
+  padding: 0.5em;
+  width: 220%;
+  z-index: 3;
+  opacity: 0;
+  pointer-events: none;
+
+}
+#main #contacts .common_info h5 {
+  display: block;
+  text-align: center;
+  color: black;
+  border-radius: 8px;
+  background-color: #b3b3b363;
+  height: 2em;
+  line-height: 2em;
+  width: 7em;
+  margin: .5em;
+  transition: .4s ease;
+}
+#main #contacts .common_info .timetable:hover h5{
+  background-color: dodgerblue;
+  color: white;
+}
+#main #contacts .common_info .timetable:hover p {
+  background-color: #d6d6d6;
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(1em)
+}
 #main #contacts .infocontact p i {
   font-size:1em;
   transition: .4s ease;
@@ -276,31 +329,77 @@ html, body{
   transform: translateY(0.3em);
   color: dodgerblue;
 }
-#main #contacts a img {
+#main #contacts :not(.map) a img {
   width: 20%;
+  animation: bounce 1s;
+  animation-delay: 0.7s;
+  transition: .5s ease;
 }
 #main #contacts .social {
   display: flex;
   justify-content: center;
   margin: 1em;
-  
 }
 #main #contacts .social a {
  width: 25%;
 }
 #main #contacts .social a img {
   width: 70%;
+  
+}
+#main #contacts :not(.map) a img:hover {
+  transform: translateY(-0.7em);
+}
+#main #contacts .map {
+  overflow: hidden;
+}
+#main #contacts .map a {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+#main #contacts .map a img {
+  transition: .5s ease;
+}
+#main #contacts .map p {
+  text-align: center;
+  position: relative;
+  top: -5em;
+  z-index: 2;
+  background-color: #9190907e;
+  border-radius: 8px;
+  opacity: 0;
+  transition: .4s ease;
+  color: white;
+  height: 2em;
+  width: 7em;
+  line-height: 2em;
+}
+#main #contacts .map:hover a img {
+  transform: scale(1.2);
+  -webkit-filter: brightness(80%);
+  filter: brightness(80%);
+}
+#main #contacts .map:hover a p {
+  opacity: 1;
+}
+#main #contacts .map:hover a p:hover {
+  background-color: dodgerblue;
 }
 #main #greets {
   padding-top: 7em; /* to fix anchor element*/
   margin: -6em 1em 1em 1em;
   grid-area: 1 / 2 / span 1 / span 1;
 }
+#main #greets p {
+  line-height: 1.9em;
+}
 #main #comunications {
   padding-top: 7em; /* to fix anchor element*/
   margin: -6em 1em 1em 1em;
   grid-area: 2 / 2 / span 1 / span 1;
 }
+
 .footer {
   background-color: #f1f1f1;
   height: 3000px;
