--- a/theme.css
+++ b/theme.css
@@ -32,10 +32,7 @@ a {
   z-index: 1;
 }
 .header>img {
-  position: relative;
-  right: 10%;
   flex-grow: 2;
-  object-fit: contain;
   width: 20%;
   height: 80%;
   margin-top: auto;
@@ -309,7 +306,7 @@ html, body{
   transform: translateY(1em)
 }
 #main #contacts .infocontact p i {
-  font-size:1em;
+  font-size: 1em;
   transition: .4s ease;
 }
 #main #contacts a[alt="Farnesina Map"] img{
@@ -344,8 +341,7 @@ html, body{
  width: 25%;
 }
 #main #contacts .social a img {
-  width: 70%;
-  
+  width: 70%;  
 }
 #main #contacts :not(.map) a img:hover {
   transform: translateY(-0.7em);
@@ -444,9 +440,17 @@ html, body{
   padding-top: 3em;
 }
 @media only screen and (max-width: 600px) {
+  .header {
+    flex-direction: flex-start;
+  }
   .header a {
     display: none;
-
+  }
+  .header .RE {
+    display: none;
+  }
+  .bigtitle .background {
+    animation: none;
   }
   .bigtitle .frontground .nav {
     display: none;
