--- a/theme.css
+++ b/theme.css
@@ -29,14 +29,17 @@ a {
   top: 0px;
   display: flex;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 4;
 }
-.header>img {
+.header img {
   flex-grow: 2;
-  width: 20%;
+  object-fit: contain;
   height: 80%;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto auto auto 1em;
+  width: 10%;
+  display: block;
+  max-width: 4em;
+  min-width: 4em;
 }
 .header .RE {
   flex-grow: 0.5;
@@ -84,6 +87,9 @@ a {
   height: inherit;
   width: 5em;
 }
+.menu {
+  display: none;
+}
 .header>a {
   margin-top: auto;
   margin-bottom: auto;
@@ -116,7 +122,7 @@ html, body{
 }
 .bigtitle {
   position: relative;
-  z-index: 2;
+  z-index: 5;
   height: 100%;
   width: 100%;
 }
@@ -361,7 +367,6 @@ html, body{
   text-align: center;
   position: relative;
   top: -5em;
-  z-index: 2;
   background-color: #9190907e;
   border-radius: 8px;
   opacity: 0;
@@ -405,16 +410,20 @@ html, body{
   font-size: 1.15em;
   text-align: center;
 }
+#main #greets .buttons .bt div {
+  position: absolute;
+  width: 100%;
+}
 #main #greets .buttons .bt a  {
   display: block;
   pointer-events: none;
   text-align: center;
   opacity: 0;
   transition: .4s ease;
-  line-height: 1.8em;
+  line-height: 1.5em;
   border-radius: 8px;
   background-color: #f1f1f1;
-  margin: 0.6em 0.6em 0.6em 0.6em;
+  margin: 0.5em 0.6em 0.6em 0.6em;
   padding: 0.5em;
   font-size: 0.8em;
 }
@@ -449,6 +458,35 @@ html, body{
   .header .RE {
     display: none;
   }
+  .menu {
+    display: block;
+    z-index: 6;
+  }
+  .menu img{
+    position: fixed;
+    top:0;
+    right: 0;
+    width: 20%
+  }
+  .menu .openmenu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    color: white;
+    background-color: #64646483;
+    transition: .5s ease;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 7;
+  }
+  .menu:hover .openmenu {
+    display: block;
+    opacity: 1;
+    pointer-events: auto;
+
+  }
   .bigtitle .background {
     animation: none;
   }
@@ -467,7 +505,16 @@ html, body{
     justify-content: center;
   }
   #main #greets .buttons {
-    display: none;
+    flex-direction: column;
+  }
+  #main #greets .buttons div {
+    width: 50%;
+    margin-bottom: 0.8em;
+  }
+  #main #greets .buttons .bt div {
+    top: -1em;
+    right: -100%;
+    width: 100%;
   }
 }
 @media only screen and (max-width: 390px) {
