menu and relative buttons

--- a/theme.css
+++ b/theme.css
@@ -87,7 +87,7 @@ a {
   height: inherit;
   width: 5em;
 }
-.menu {
+.header .menu {
   display: none;
 }
 .header>a {
@@ -458,22 +458,35 @@ html, body{
   .header .RE {
     display: none;
   }
-  .menu {
-    display: block;
+  .header .menu {
+    display: flex;
     z-index: 6;
+    justify-content: center;
+    align-items: center;
+
   }
-  .menu img{
-    position: fixed;
-    top:0;
+  .header .menu img{
+    margin-right: 1em;
+    width: 20%;
+    transition: .5s ease;
+  }
+  .header .menu img[src="data/img/telegram_logo.png"] {
+    position: absolute;
+    opacity: 0;
+    top: 0;
     right: 0;
-    width: 20%
+    height: fit-content;
+    z-index: 8;
+    height: 100%;
   }
-  .menu .openmenu {
+  .header .menu .openmenu {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     position: fixed;
     width: 100%;
     height: 100%;
     opacity: 0;
-    color: white;
     background-color: #64646483;
     transition: .5s ease;
     top: 0;
@@ -481,11 +494,31 @@ html, body{
     pointer-events: none;
     z-index: 7;
   }
-  .menu:hover .openmenu {
+  .header .menu .openmenu a {
     display: block;
+    background: #c2c2c283;
+    border-radius: 8px;
+    height: fit-content;
+    transition: .4s ease;
+    padding: 0.5em;
+  }
+  .header .menu .openmenu a h3{
+    color: white;
+    line-height: 2em;
+    margin-top: auto;
+  }
+  .header .menu:hover .openmenu {
     opacity: 1;
     pointer-events: auto;
-
+  }
+  .header .menu:hover img {
+    opacity: 0;
+  }
+  .header .menu:hover img[src="data/img/telegram_logo.png"] {
+    opacity: 1;
+  }
+  .header .menu:hover .openmenu a:hover {
+    background-color: dodgerblue;
   }
   .bigtitle .background {
     animation: none;
