--- a/theme.css
+++ b/theme.css
@@ -459,6 +459,7 @@ html, body{
     z-index: 6;
     justify-content: center;
     align-items: center;
+    margin-right: 1em;
 
   }
   .row .three{
@@ -467,95 +468,63 @@ html, body{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #2c3e50;
-    color: #ecf0f1;
+    color: #454545;
     text-align: center;
   }
-  
+  /*Logo and animations by https://codepen.io/RRoberts/ */
+  .hamburger {
+    z-index: 10;
+  }
   .hamburger .line{
     width: 50px;
     height: 5px;
-    background-color: #ecf0f1;
+    background-color: #454545;
     display: block;
     margin: 8px auto;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-  }
-  
+  }  
   .hamburger:hover{
     cursor: pointer;
   }
-  .header .menu #hamburger-1:hover .line:nth-child(2) .header .menu #hamburger-1:active .line:nth-child(2){
+  .header .menu #hamburger-1.is_active .line:nth-child(2), .header .menu #hamburger-1.is_active .line:nth-child(2){
     opacity: 0;
   }
-  
-  #hamburger-1.is-active .line:nth-child(1){
+  #hamburger-1.is_active .line:nth-child(1){
     -webkit-transform: translateY(13px) rotate(45deg);
     -ms-transform: translateY(13px) rotate(45deg);
     -o-transform: translateY(13px) rotate(45deg);
     transform: translateY(13px) rotate(45deg);
-  }
-  
-  #hamburger-1.is-active .line:nth-child(3){
+  } 
+  #hamburger-1.is_active .line:nth-child(3){
     -webkit-transform: translateY(-13px) rotate(-45deg);
     -ms-transform: translateY(-13px) rotate(-45deg);
     -o-transform: translateY(-13px) rotate(-45deg);
     transform: translateY(-13px) rotate(-45deg);
   }
-  .header .menu img{
-    margin-right: 1em;
-    width: 20%;
-    transition: .5s ease;
-  }
-  .header .menu img[src="data/img/telegram_logo.png"] {
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: 0;
-    height: fit-content;
-    z-index: 8;
-    height: 100%;
-  }
-  .header .menu .openmenu {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background-color: #64646483;
-    transition: .5s ease;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    z-index: 7;
-  }
-  .header .menu .openmenu a {
-    display: block;
-    background: #c2c2c283;
-    border-radius: 8px;
-    height: fit-content;
+  .openmenu {
     transition: .4s ease;
-    padding: 0.5em;
-  }
-  .header .menu .openmenu a h3{
-    color: white;
-    line-height: 2em;
-    margin-top: auto;
-  }
-  .header .menu:hover .openmenu {
-    opacity: 1;
-    pointer-events: auto;
-  }
-  .header .menu:hover img {
+    top: 3.9em;
+    left: 0;
+    position: absolute;
+    width: 100%;
     opacity: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 1em;
+    box-sizing: border-box;
+    background: #f1f1f1;
   }
-  .header .menu:hover img[src="data/img/telegram_logo.png"] {
+  .openmenu.is_active a {
+    display: block;
+    border-radius: 8px;
+  }
+  .openmenu.is_active {
     opacity: 1;
-  }
-  .header .menu:hover .openmenu a:hover {
-    background-color: dodgerblue;
+    display: block;
+    transform: translateY(1em);
+    
   }
   .bigtitle .background {
     animation: none;
