--- a/theme.css
+++ b/theme.css
@@ -518,7 +518,7 @@ html, body{
   }
   .openmenu.is_active a {
     display: block;
-    border-radius: 8px;
+    line-height: 150%;
   }
   .openmenu.is_active {
     opacity: 1;
