--- a/theme.css
+++ b/theme.css
@@ -265,8 +265,9 @@ html, body{
 }
 #main #contacts .common_info {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
+  align-items: center
 }
 #main #contacts .common_info .timetable {
   position: relative;
