adjusted main screen in mobile mode

--- a/theme.css
+++ b/theme.css
@@ -465,6 +465,7 @@ html, body{
 @media only screen and (max-width: 600px) {
   .header {
     flex-direction: flex-start;
+    height: 4em;
   }
   .header a {
     display: none;
@@ -479,6 +480,14 @@ html, body{
     align-items: center;
     margin-right: 1em;
 
+  }
+  .bigtitle {
+    height: 30%;
+    z-index: 0;
+    margin-top: 4em;
+  }
+  .bigtitle .frontground {
+    display: none;
   }
   .row .three{
     padding: 80px 30px;
@@ -523,7 +532,7 @@ html, body{
   }
   .openmenu {
     transition: .4s ease;
-    top: 3.9em;
+    top: 2.9em;
     left: 0;
     position: absolute;
     width: 100%;
@@ -557,6 +566,7 @@ html, body{
     display: none;
   }
   #main {
+    margin-top: -4em;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
